tests/snapshots/yaml_suite_snapshots__yaml_suite_CUP7_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 5.6. Node Property Indicators
  from: "http://www.yaml.org/spec/1.2/spec.html#id2773402"
  tags: local-tag spec tag alias
  yaml: "anchored: !local &anchor value\nalias: *anchor\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :anchored\n   =VAL &anchor <!local> :value\n   =VAL :alias\n   =ALI *anchor\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"anchored\": \"value\",\n  \"alias\": \"value\"\n}\n"
  dump: "anchored: &anchor !local value\nalias: *anchor\n"
