tests/snapshots/yaml_suite_snapshots__yaml_suite_CVW2_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid comment after comma
  from: "@perlpunk"
  tags: comment error flow sequence
  fail: true
  yaml: "---\n[ a, b, c,#invalid\n]\n"
  tree: "+STR\n +DOC ---\n  +SEQ []\n   =VAL :a\n   =VAL :b\n   =VAL :c\n"
