tests/snapshots/yaml_suite_snapshots__yaml_suite_CXX2_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Mapping with anchor on document start line
  from: "@perlpunk"
  tags: anchor error header mapping
  fail: true
  yaml: "--- &anchor a: b\n"
  tree: "+STR\n +DOC ---\n"
