tests/snapshots/yaml_suite_snapshots__yaml_suite_CXX2_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Mapping with anchor on document start line
  tags: anchor error header mapping
  tree: "+STR\n +DOC ---\n"
  yaml: "--- &anchor a: b\n"
