tests/snapshots/yaml_suite_snapshots__yaml_suite_D49Q_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Multiline single quoted implicit keys
  from: "@perlpunk"
  tags: error single mapping
  fail: true
  yaml: "'a\\nb': 1\n'c\n d': 1\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL 'a\\\\nb\n   =VAL :1\n"
