tests/snapshots/yaml_suite_snapshots__yaml_suite_D49Q_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Multiline single quoted implicit keys
  tags: error single mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL 'a\\\\nb\n   =VAL :1\n"
  yaml: "'a\\nb': 1\n'c\n d': 1\n"
